# calliope

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
docs/: CALLIOPE-SPEC.md  LIFT_PATTERN.md
src/calliope/: __init__.py  _pathutil.py
src/calliope/assets/: __init__.py  asset.py  bundler.py  hashing.py  manifest.py  rewriter.py
src/calliope/cards/: __init__.py  base.py  formatting.py  heatbar.py  pill.py  protocol.py  taxonomy.py  tier.py
src/calliope/deploy/: __init__.py  dryrun.py  local.py  result.py  target.py
src/calliope/pages/: __init__.py  _validation.py  blocks.py  hero.py  narrative.py  pagination.py  scoreboard.py
src/calliope/render/: __init__.py  _runner.py  job.py  protocol.py  report.py  results.py  serial.py  threaded.py
src/calliope/templates/: __init__.py  base.py  extraction.py  metadata.py  registry.py  shell.py  validation.py
tests/: conftest.py  test_assets_asset.py  test_assets_bundler.py  test_assets_hashing.py  test_assets_manifest.py  test_assets_rewriter.py  test_base.py  test_cards_base.py  test_cards_formatting.py  test_cards_heatbar.py  test_cards_pill.py  test_cards_protocol.py  test_cards_taxonomy.py  test_cards_tier.py  test_deploy.py  test_extraction.py  test_imports.py  test_metadata.py  test_pages_blocks.py  test_pages_hero.py  test_pages_narrative.py  test_pages_pagination.py  test_pages_scoreboard.py  test_registry.py  test_render_drivers.py  test_render_job.py  test_render_protocol.py  test_render_report.py  test_shell.py  test_validation.py
