[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calliope"
version = "0.0.3"
description = "Static-site rendering substrate for data-journalism pipelines. Cards, multi-page generators, asset bundling, deploy adapters."
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
readme = "README.md"
keywords = [
    "static-site-generator",
    "data-journalism",
    "polars",
    "jinja2",
    "card-renderer",
]
authors = [
    { name = "Jason Perlow", email = "jperlow@gmail.com" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    # Core rendering. Jinja2 for templates; the cleanroom convention is
    # template-driven page generation with per-row card components.
    "jinja2>=3.1.0",
    # Polars-native row iteration. Calliope reads rows from caller-
    # supplied DataFrames and renders them; pandas is intentionally NOT
    # a dep — apps that have pandas frames convert via .to_polars().
    "polars>=0.20.0",
    # PEP 440 / SemVer comparison for the template registry. PyPA-canonical.
    "packaging>=23.0",
]

[project.optional-dependencies]
# CSS-inlining for email-equivalent rendering. Useful for newsletters
# but not required for plain static sites.
inline = [
    "premailer>=3.10.0",
]
# Deploy adapters. Tiiny.host is the cleanroom default; future targets
# (GitHub Pages, Netlify, S3+CloudFront) can extend this group.
deploy = [
    "requests>=2.31.0",   # Tiiny upload via HTTP
]
# Development.
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.urls]
Homepage = "https://gitlab.com/perlowja/calliope"
Repository = "https://gitlab.com/perlowja/calliope"
Issues = "https://gitlab.com/perlowja/calliope/-/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv]
python-preference = "managed"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B008"]
